changed widths to avoid scrollbar x

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 #bg-cont {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100%;
   margin: 0px 0px 0px 0px;
@@ -50,7 +50,7 @@ body {
 }
 
 #main-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 3;
   display: flex;
@@ -74,7 +74,7 @@ body {
 }
 
 #buffer-top {
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   display: flex;
   flex-direction: column;
